# wpa3_tester

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  main.cpp
result_overview/: CMakeLists.txt  README.txt
result_overview/include/: devices.h  html_guard.h  target.h
result_overview/src/: devices.cpp  main.cpp  target.cpp
result_overview/static/: style.css  table_aggregate.js
tests/: CMakeLists.txt  test_cleanup_namespaces.cpp  test_config_validation.cpp
tests/attacks/: CMakeLists.txt
tests/attacks/DoS_hard/: CMakeLists.txt  test_sae_helper.cpp
tests/attacks/bl0ck/: CMakeLists.txt  test_bl0ck_frame.cpp
tests/attacks/mc_mitm/: CMakeLists.txt  assoc_resp.pcapng  beacon_test.pcapng  eapol1.pcapng  mitm_helpers.h  probe_res.pcapng  rogue_client_capture.pcap  test_MonitorSocket.cpp  test_mc_mitm.cpp  test_real_channel.cpp  test_rogue_channel.cpp  test_wifi_utils.cpp
tests/attacks/two_iface/: CMakeLists.txt  stub_two_iface.h  test_cache_rw.cpp  test_validate.cpp
tests/config/: CMakeLists.txt  test_actor_config.cpp  test_actor_config_sim_setup.cpp  test_global_config.cpp  test_run_config.cpp  test_run_status_utils.cpp
tests/config_validation/test/: 02_test_happy_path_full.yaml  03_ex1.yaml  03_test_extends_line.yaml  04_ex1_module.yaml  05_cicle.yaml  08_test_path_to_folder.yaml
tests/config_validation/test_suite/: 01_ts_path_minimal.yaml  02_ts_generator_vars.yaml
tests/config_validation/validator/: 01_test_validator_minimal.yaml  02_extends.yaml  02_inner_validator.schema.yaml  03_error_validator_extends.yaml  03_extends.yaml
tests/ex_program/: CMakeLists.txt
tests/ex_program/hostapd/: CMakeLists.txt  test_hostapd_helper.cpp
tests/ex_program/openwrt/: CMakeLists.txt  iw_phy_output.txt  test_openwrt_hw_capabilities.cpp
tests/integration/: CMakeLists.txt  test_sim_setup_hwsim.cpp
tests/logger/: CMakeLists.txt  test_error_messages.cpp  test_html_guard.cpp  test_log.cpp  test_log_time.cpp  test_report_guard.cpp
tests/observer/: CMakeLists.txt  test_tshark.cpp  test_tshark_minimal.pcapng
tests/setup/: CMakeLists.txt  test_cleanup_namespaces.cpp  test_config_validation.cpp  test_scan.cpp
tests/suite/: CMakeLists.txt  test_result_helper.cpp
tests/system/: CMakeLists.txt  test_ProcessManager_callbacks.cpp  test_ath9k_htc.cpp  test_hw_capabilities.cpp  test_injection_check.cpp  test_ip.cpp  test_nl80211_cb.cpp  test_process_manager.cpp  test_solve_new_pdu.cpp  test_utils.cpp  test_validator.cpp
tests/system/hw_info/: CMakeLists.txt  test_is_hw_info.cpp  test_load_hw_info_cache.cpp
tests/test_helpers/: CMakeLists.txt  pcap_helper.cpp  pcap_helper.h
tests_manual/: CMakeLists.txt  info_openwrt.cpp  list_external_entities.cpp
tests_manual/attacks/: CMakeLists.txt  manual_channel_switch.cpp  manual_get_commit_values.cpp  manual_mc_mitm.cpp  manual_start_ap.cpp
tests_manual/config/: CMakeLists.txt  manual_config_validation.cpp
tests_manual/ex_program/openwrt/: info_openwrt.cpp
tests_manual/manual_test_core/: manual_test_wizards.cpp  manual_test_wizards.h
tests_manual/one_iface/: CMakeLists.txt  test_manual_iface_info.cpp
tests_manual/system/: CMakeLists.txt  manual_iface_tests.cpp
tests_manual/two_iface/: CMakeLists.txt  test_manual_injection_two_iface.cpp
wpa3_test/: CMakeLists.txt  main.cpp
wpa3_test/attack_config/: example_whitebox_table.csv  global_config.yaml  global_paths.yaml  global_tester_config.yaml
wpa3_test/attack_config/DoS_hard/: observers_DoS.comp.yaml
wpa3_test/attack_config/DoS_soft/: channel_switch.schema.yaml  channel_switch.yaml
wpa3_test/attack_config/Enterprise/: dragonslayer.schema.yaml
wpa3_test/attack_config/bb_scan/: scan_AP.schema.yaml  scan_AP.yaml
wpa3_test/attack_config/by_target/: scan_AP.schema.yaml  scan_AP.yaml
wpa3_test/attack_config/downgrade/: owe_trans.yaml  owe_trans_rogueAP.yaml  wpa3_trans_downgrade.yaml
wpa3_test/attack_config/mc_mitm/: mc_mitm.yaml  mc_mitm_sim.yaml  ssid_confusion.yaml  test_mitm.txt
wpa3_test/attack_config/validator/: global_config.schema.yaml  run_config.schema.yaml  test_suite_validator.schema.yaml  test_suite_validator.yaml  test_validator.schema.yaml  test_validator.yaml
wpa3_test/awk_scripts/: generated_monitor.h  monitor.awk
wpa3_test/cmake/: awk_files.cmake  coverage.cmake  dependencies.cmake  external_libs.cmake  hostapd_cflags.h.in  libraries.cmake  targets.cmake
wpa3_test/include/: ProcessManager.h  default.h  inteprrupt.h
wpa3_test/include/attacks/: attacks.h  sae_helper.h
wpa3_test/include/config/: ActorPtr.h  Actor_config.h  ObserverPtr.h  Observer_config.h  RunStatus.h  RunSuiteStatus.h  Run_Config.h  actor_keys.h  global_config.h  global_paths.h  hw_capabilities.h  nl80211_compat.h
wpa3_test/include/ex_program/: ex_program.h
wpa3_test/include/logger/: devices.h  error_log.h  log.h  report.h
wpa3_test/include/observer/: iperf_wrapper.h  mausezahn_wrapper.h  observers.h  resource_checker.h  station_counter.h  tcpdump_wrapper.h  tshark_wrapper.h
wpa3_test/include/overview/: html_guard.h
wpa3_test/include/scan/: scan.h  scan_EAP.h  scan_STA.h
wpa3_test/include/setup/: YAMLValidator.h  config_parser.h  program.h  requirement_validation.h  scan.h
wpa3_test/include/suite/: result_helper.h  suite_helper.h  suite_report.h  test_suites.h
wpa3_test/include/system/: ProcessManager.h  hw_capabilities.h  hw_info.h  iface.h  injection_result.h  ip.h  netlink_guards.h  netlink_helper.h  runtime_checks.h  utils.h  wifi_channel.h
wpa3_test/remote_injector/: CMakeLists.txt  main.c
wpa3_test/src/: ProcessManager.cpp
wpa3_test/src/attacks/: attacks.cpp  sae_helper.cpp
wpa3_test/src/config/: ActorPtr.cpp  Actor_config.cpp  ObserverPtr.cpp  Observer_config.cpp  RunStatus.cpp  RunSuiteStatus.cpp  config_parser.cpp  global_config.cpp  global_paths.cpp  hw_capabilities.cpp  nl80211_compat.cpp  requirement_validation.cpp
wpa3_test/src/ex_program/: ex_progam.cpp
wpa3_test/src/logger/: devices.cpp  error_log.cpp  log.cpp  pm_logger.cpp  report.cpp
wpa3_test/src/observer/: iperf_wrapper.cpp  mausezahn_wrapper.cpp  (+5 more)
(+557 files in other folders)
